test: fixed tests